Removed animation for the footer

--- a/index.html
+++ b/index.html
@@ -339,8 +339,8 @@
         </p>
       </div>
       <footer>
-        <h2 class="color-gold" data-aos="fade-right">CONTACT US</h2>
-        <div class="footer-grid" data-aos="zoom-in-up">
+        <h2 class="color-gold">CONTACT US</h2>
+        <div class="footer-grid">
           <div class="footer-grid-left">
             <p>Email: friendsoffuo@website.com</p>
             <p>Phone: +23359874568</p>
@@ -372,3 +372,4 @@
     </main>
   </body>
 </html>
+
