optmized the latest projects and photo highlights section for desktop

--- a/index.html
+++ b/index.html
@@ -47,10 +47,7 @@
     </div>
     <main>
       <div class="pop-up-window-hidden">
-        <div
-          class="close-pop-up-button"
-          class="close-button close-pop-up-button"
-        >
+        <div class="close-button close-pop-up-button">
           <img src="./icons/close-icon-black.png" />
         </div>
         <div class="pop-up-content">
@@ -176,7 +173,6 @@
       <section class="ongoing-campaigns" data-aos="zoom-in-up">
         <h2 class="color-gold">ONGOING CAMPAIGNS</h2>
         <div class="ongoing-campaigns-mobile-view" data-aos="zoom-in-up">
-          <!-- Add the slider -->
           <!-- Slider main container -->
           <div class="ongoing-campaigns-swiper">
             <!-- Additional required wrapper -->
@@ -221,6 +217,35 @@
             <!-- If we need navigation buttons -->
             <div class="swiper-button-prev"></div>
             <div class="swiper-button-next"></div>
+          </div>
+        </div>
+        <div class="ongoing-campaigns-desktop-view">
+          <div class="campaign">
+            <img
+              class="project-top-image"
+              src="./Images/fuo 2.jpeg"
+              alt="Image of Children in classroom holding their books"
+            />
+            <h3>ONE DESK AT A TIME</h3>
+            <p class="learn-more-link">Learn more</p>
+          </div>
+          <div class="campaign">
+            <img
+              class="project-top-image"
+              src="./Images/fuo 2.jpeg"
+              alt="Image of Children in classroom holding their books"
+            />
+            <h3>ONE DESK AT A TIME</h3>
+            <p class="learn-more-link">Learn more</p>
+          </div>
+          <div class="campaign">
+            <img
+              class="project-top-image"
+              src="./Images/fuo 2.jpeg"
+              alt="Image of Children in classroom holding their books"
+            />
+            <h3>ONE DESK AT A TIME</h3>
+            <p class="learn-more-link">Learn more</p>
           </div>
         </div>
         <div class="encouragement-quote" data-aos="zoom-in-up">
@@ -299,6 +324,53 @@
             <div class="swiper-button-next"></div>
           </div>
         </div>
+        <div class="latest-projects-desktop-view">
+          <div class="project">
+            <img
+              class="project-top-image"
+              src="./Images/fuo 2.jpeg"
+              alt="Image of Children in classroom holding their books"
+            />
+            <h3>PROJECT TITLE</h3>
+            <p class="project-description">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Voluptatem, quam! Vitae at iure, quidem inventore ab nostrum
+              aliquam dignissimos? A nihil molestiae voluptatum molestias labore
+              assumenda nobis eligendi, suscipit mollitia?
+            </p>
+            <p class="learn-more-link">Read more</p>
+          </div>
+          <div class="project">
+            <img
+              class="project-top-image"
+              src="./Images/fuo bg.jpeg"
+              alt="Image of Children in classroom holding their books"
+            />
+            <h3>PROJECT TITLE</h3>
+            <p class="project-description">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Voluptatem, quam! Vitae at iure, quidem inventore ab nostrum
+              aliquam dignissimos? A nihil molestiae voluptatum molestias labore
+              assumenda nobis eligendi, suscipit mollitia?
+            </p>
+            <p class="learn-more-link">Read more</p>
+          </div>
+          <div class="project">
+            <img
+              class="project-top-image"
+              src="./Images/fuo 4.jpeg"
+              alt="Image of Children in classroom holding their books"
+            />
+            <h3>PROJECT TITLE</h3>
+            <p class="project-description">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Voluptatem, quam! Vitae at iure, quidem inventore ab nostrum
+              aliquam dignissimos? A nihil molestiae voluptatum molestias labore
+              assumenda nobis eligendi, suscipit mollitia?
+            </p>
+            <p class="learn-more-link">Read more</p>
+          </div>
+        </div>
       </section>
       <div class="photo-highlights-section" data-aos="zoom-in-up">
         <h2 class="color-gold">PHOTO HIGHLIGHTS</h2>
@@ -331,7 +403,21 @@
           <div class="swiper-button-prev"></div>
           <div class="swiper-button-next"></div>
         </div>
-
+        <div class="desktop-photo-highlights">
+          <div class="desktop-photo-swiper">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <img src="./Images/fuo1.jpeg" alt="" />
+              </div>
+              <div class="swiper-slide">
+                <img src="./Images/fuo 2.jpeg" alt="" />
+              </div>
+              <div class="swiper-slide">
+                <img src="./Images/fuo 3.jpeg" alt="" />
+              </div>
+            </div>
+          </div>
+        </div>
         <p class="photo-description">
           These photos were among the first I received from Mary Naa-Afi Kofi, a
           devoted teacher at the Fuo AME Zion Basic School. They showed students
@@ -345,9 +431,24 @@
             <p>Email: friendsoffuo@website.com</p>
             <p>Phone: +23359874568</p>
             <div class="social-img-links">
-              <a href="">Whatsapp</a>
-              <a href=""></a>
-              <a href=""></a>
+              <a href="">
+                <img
+                  src="./icons/whatsapp_logo_white-removebg-preview.png"
+                  alt="whatsapp contact link"
+                />
+              </a>
+              <a href="">
+                <img
+                  src="./icons/twitter-x-logo-png-9-removebg-preview.png"
+                  alt="twitter account link"
+                />
+              </a>
+              <a href="">
+                <img
+                  src="./icons/instagram-removebg-preview.png"
+                  alt="instagram account link"
+                />
+              </a>
             </div>
           </div>
           <div class="footer-grid-right">
@@ -372,4 +473,3 @@
     </main>
   </body>
 </html>
-
