--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <a href="index.html" class="nav-link">HOME</a>
         <a href="#about-section" class="nav-link">ABOUT</a>
         <a href="" class="nav-link">BLOG</a>
-        <a href="" class="nav-link">SHOP</a>
+        <a href="https://selar.com/m/friends-of-fuo-2-inc1" class="nav-link">SHOP</a>
         <p href="" class="nav-link">CONTACT</p>
       </div>
       <div class="nav-buttons">
@@ -42,7 +42,7 @@
       <a href="index.html" class="nav-link">HOME</a>
       <a href="#about-section" class="nav-link">ABOUT</a>
       <a href="" class="nav-link">BLOG</a>
-      <a href="" class="nav-link">SHOP</a>
+      <a href="https://selar.com/m/friends-of-fuo-2-inc1" class="nav-link">SHOP</a>
       <p href="" class="nav-link">CONTACT</p>
     </div>
     <main>
@@ -473,3 +473,4 @@
     </main>
   </body>
 </html>
+
