added the necessary hrefs to the blog and shop links

--- a/index.html
+++ b/index.html
@@ -22,8 +22,17 @@
         <!-- Add link for the shop and blog for later -->
         <a href="index.html" class="nav-link home-link">HOME</a>
         <a href="#about-section" class="nav-link">ABOUT</a>
-        <a href="" class="nav-link">BLOG</a>
-        <a href="" class="nav-link">SHOP</a>
+        <a
+          href="https://friends-of-fuo-backend.onrender.com/blog"
+          class="nav-link"
+          >BLOG</a
+        >
+        <a
+          href="https://selar.com/m/friends-of-fuo-2-inc1"
+          target="_blank"
+          class="nav-link"
+          >SHOP</a
+        >
         <p href="" class="nav-link">CONTACT</p>
       </div>
       <div class="nav-buttons">
@@ -41,8 +50,17 @@
       </div>
       <a href="index.html" class="nav-link">HOME</a>
       <a href="#about-section" class="nav-link">ABOUT</a>
-      <a href="" class="nav-link">BLOG</a>
-      <a href="" class="nav-link">SHOP</a>
+      <a
+        href="https://friends-of-fuo-backend.onrender.com/blog"
+        class="nav-link"
+        >BLOG</a
+      >
+      <a
+        href="https://selar.com/m/friends-of-fuo-2-inc1"
+        target="_blank"
+        class="nav-link"
+        >SHOP</a
+      >
       <p href="" class="nav-link">CONTACT</p>
     </div>
     <main>
