added links to the footer

--- a/index.html
+++ b/index.html
@@ -474,8 +474,14 @@
             <div class="quick-links-grid">
               <div class="quick-links-grid-left">
                 <a href="">About Us</a>
-                <a href="">Blog</a>
-                <a href="">Shop</a>
+                <a href="https://friends-of-fuo-backend.onrender.com/blog"
+                  >Blog</a
+                >
+                <a
+                  href="https://selar.com/m/friends-of-fuo-2-inc1"
+                  target="_blank"
+                  >Shop</a
+                >
               </div>
               <div class="quick-links-grid-right">
                 <a href="">Make a donation</a>
