increased the general font size

--- a/index.html
+++ b/index.html
@@ -128,17 +128,22 @@
               <p data-aos="zoom-in-up">
                 Our journey began in 2023, when our founder met Mary Naa-Afi
                 Kofi, a dedicated teacher, at a missionary conference in Accra.
+              </p>
+              <p>
                 Through her photos, we saw children learning on the floor or
                 squeezed into broken desks. Inspired by the students’
-                determination and Mary’s unwavering commitment.<br />
+                determination and Mary’s unwavering commitment.
+              </p>
+              <p>
                 Friends of Fuo 2Inc. was created to help meet these needs, one
                 classroom at a time. Today, the school seves 497 students from
-                Nursery through Junior High School. <br />
+                Nursery through Junior High School.
+              </p>
+              <p>
                 In addition to classroom support, we also help students from
                 Ghana pursue higher education, expanding access and opportunity
-                beyond the schoolyard.<br />
-                Together, we are building brighter futures through education,
-                dignity, and care
+                beyond the schoolyard. Together, we are building brighter
+                futures through education, dignity, and care
               </p>
             </div>
           </div>
