changed background color to purple

--- a/index.html
+++ b/index.html
@@ -249,7 +249,11 @@
                     src="./Images/fuo 2.jpeg"
                     alt="Image of Children in classroom holding their books"
                   />
-                  <h3>No child should learn on the floor</h3>
+                  <h3 class="color-gold">No child should learn on the floor</h3>
+                  <p class="campaign-preview">
+                    Right now, students at Fuo AME Zion Basic School in Tamale,
+                    Ghana are doing everything...
+                  </p>
                   <p class="learn-more-link" data-campaign="no-child">
                     Learn more
                   </p>
@@ -263,7 +267,11 @@
                     src="./Images/fuo 3.jpeg"
                     alt="Image of Children in classroom holding their books"
                   />
-                  <h3>Support a classroom</h3>
+                  <h3 class="color-gold">Support a classroom</h3>
+                  <p class="campaign-preview">
+                    This allows you to raise more per donor without
+                    pressure.Example Giving Levels...
+                  </p>
                   <p class="learn-more-link" data-campaign="support-classroom">
                     learn more
                   </p>
@@ -283,7 +291,11 @@
               src="./Images/fuo 2.jpeg"
               alt="Image of Children in classroom holding their books"
             />
-            <h3>No child should learn on the floor</h3>
+            <h3 class="color-gold">No child should learn on the floor</h3>
+            <p class="campaign-preview">
+              Right now, students at Fuo AME Zion Basic School in Tamale, Ghana
+              are doing everything...
+            </p>
             <p class="learn-more-link" data-campaign="no-child">Learn more</p>
           </div>
           <div class="campaign">
@@ -292,7 +304,11 @@
               src="./Images/fuo 2.jpeg"
               alt="Image of Children in classroom holding their books"
             />
-            <h3>Support a classroom</h3>
+            <h3 class="color-gold">Support a classroom</h3>
+            <p class="campaign-preview">
+              This allows you to raise more per donor without pressure.Example
+              Giving Levels...
+            </p>
             <p class="learn-more-link" data-campaign="support-classroom">
               Learn more
             </p>
