added a gradient between the hero and about section

--- a/index.html
+++ b/index.html
@@ -96,6 +96,8 @@
           <a href="" class="button donate-button">Donate</a>
         </div>
       </section>
+      <div class="gradient-overlay"></div>
+
       <section class="about-section" id="about-section">
         <div class="who-we-are" data-aos="zoom-in-up">
           <div class="who-we-are-left">
