increased the font size

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="nav-links">
         <!-- Make the contact display a pop up showing all the contacts -->
         <!-- Add link for the shop and blog for later -->
-        <a href="index.html" class="nav-link home-link">HOME</a>
+        <a href="index.html" class="nav-link active-link">HOME</a>
         <a href="#about-section" class="nav-link">ABOUT</a>
         <a
           href="https://friends-of-fuo-backend.onrender.com/blog"
@@ -426,9 +426,7 @@
             </div>
           </div>
         </div>
-        <p class="Copyright-text">
-          Copyright &copy; Friends of Fuo 2 Inc. 2025
-        </p>
+        <p class="copyright-text"></p>
       </footer>
     </main>
   </body>
