increased the font size

--- a/index.html
+++ b/index.html
@@ -18,8 +18,6 @@
     <nav data-aos="fade-down">
       <h1>LOGO</h1>
       <div class="nav-links">
-        <!-- Make the contact display a pop up showing all the contacts -->
-        <!-- Add link for the shop and blog for later -->
         <a href="index.html" class="nav-link active-link">HOME</a>
         <a href="#about-section" class="nav-link">ABOUT</a>
         <a
@@ -33,7 +31,7 @@
           class="nav-link"
           >SHOP</a
         >
-        <p href="" class="nav-link">CONTACT</p>
+        <a href="#footer" class="nav-link">CONTACT</a>
       </div>
       <div class="nav-buttons">
         <a href="" class="button donate-button">DONATE</a>
@@ -61,7 +59,7 @@
         class="nav-link"
         >SHOP</a
       >
-      <p href="" class="nav-link">CONTACT</p>
+      <a href="#footer" class="nav-link">CONTACT</a>
     </div>
     <!-- Pop up window -->
     <div class="pop-up-window-hidden">
@@ -378,7 +376,7 @@
           sitting on the floor, crowded at broken desks and still eager to learn
         </p>
       </div>
-      <footer>
+      <footer id="footer" data-aos="fade-up">
         <h2 class="color-gold">CONTACT US</h2>
         <div class="footer-grid">
           <div class="footer-grid-left">
