--- a/index.html
+++ b/index.html
@@ -129,17 +129,17 @@
                 Our journey began in 2023, when our founder met Mary Naa-Afi
                 Kofi, a dedicated teacher, at a missionary conference in Accra.
               </p>
-              <p>
+              <p data-aos="zoom-in-up">
                 Through her photos, we saw children learning on the floor or
                 squeezed into broken desks. Inspired by the students’
                 determination and Mary’s unwavering commitment.
               </p>
-              <p>
+              <p data-aos="zoom-in-up">
                 Friends of Fuo 2Inc. was created to help meet these needs, one
                 classroom at a time. Today, the school seves 497 students from
                 Nursery through Junior High School.
               </p>
-              <p>
+              <p data-aos="zoom-in-up">
                 In addition to classroom support, we also help students from
                 Ghana pursue higher education, expanding access and opportunity
                 beyond the schoolyard. Together, we are building brighter
@@ -213,21 +213,23 @@
               "When Students walk into this classroom, they see who believed in
               them"
             </h2>
-            <p>At Fuo AME Zion Basic School, every classroom tells a story.</p>
-            <p>
+            <p data-aos="zoom-in-up">
+              At Fuo AME Zion Basic School, every classroom tells a story.
+            </p>
+            <p data-aos="zoom-in-up">
               On the wall is a plaque-listing the names of those who made
               learning possible in that room. Parents see it. Teachers see it.
               Students see it.
             </p>
-            <p>
+            <p data-aos="zoom-in-up">
               Children grow up knowing:<br />
               Someone somewhere cared enough to invest in us.
             </p>
-            <p>
+            <p data-aos="zoom-in-up">
               This is how generosity becomes memory.<br />
               This is how impact becomes legacy.
             </p>
-            <p>
+            <p data-aos="zoom-in-up">
               When you give to Friends of Fuo 2 Inc., your name isn't filed
               away, it is honored where learning happens
             </p>
